--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <link href="https://raw.githubusercontent.com/twbs/bootstrap/master/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://raw.githubusercontent.com/twbs/bootstrap/master/dist/js/bootstrap.min.js"></script>
     <title>Cookie Wiki</title>
   </head>
   <body>
