--- a/cookies/index.html
+++ b/cookies/index.html
@@ -2,12 +2,12 @@
   <head>
     <link href="https://raw.githubusercontent.com/twbs/bootstrap/master/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://raw.githubusercontent.com/twbs/bootstrap/master/dist/js/bootstrap.min.js"></script>
-    <title>Cookie Wiki - display</title>
+    <title>Cookie Wiki</title>
   </head>
   <body>
     <div class="jumbotron">
       <div class="container">
-        <h1></h1>
+        <h1>Cookie Wiki - </h1>
       </div>
     </div>
     <div class="container">
