--- a/cookies/index.html
+++ b/cookies/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link href="https://raw.githubusercontent.com/twbs/bootstrap/master/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://raw.githubusercontent.com/twbs/bootstrap/master/dist/js/bootstrap.min.js"></script>
     <title>Cookie Wiki</title>
   </head>
