--- a/cookies/index.html
+++ b/cookies/index.html
@@ -11,8 +11,19 @@
         <h1>Cookie Wiki - </h1>
       </div>
     </div>
-    <div class="container">
+    <section id="main" class="container">
       
-    </div>
+    </section>
+    <script>
+      $(function(){
+        if (window.location.hash){
+          var cookie = window.location.hash.split("#")[1];
+          $.getJSON(cookie+".json", function(data){
+            window.title += cookie;
+            $("#main").text(JSON.stringify(data));
+          });
+        }
+      });
+    </script>
   </body>
 </html>
