--- a/cookies/index.html
+++ b/cookies/index.html
@@ -18,7 +18,7 @@
       $(function(){
         if (window.location.hash){
           var cookie = window.location.hash.split("#")[1];
-          $.getJSON("cookie.json", function(data){
+          $.getJSON("cookies.json", function(data){
             var d = data[cookie];
             window.title += cookie;
             $("#main").text(JSON.stringify(d));
