--- a/cookies/index.html
+++ b/cookies/index.html
@@ -8,11 +8,11 @@
   <body>
     <div class="jumbotron">
       <div class="container">
-        <h1>Cookie Wiki - </h1>
+        <h1>Cookie Wiki - <span id="cookie-name"></span> <small><span class="cookie-vendor"></span></small></h1>
       </div>
     </div>
     <section id="main" class="container">
-      
+      <p id="cookie-description"></p>
     </section>
     <script>
       $(function(){
@@ -20,8 +20,9 @@
           var cookie = window.location.hash.split("#")[1];
           $.getJSON("cookies.json", function(data){
             var d = data[cookie];
-            window.title += cookie;
-            $("#main").text(JSON.stringify(d));
+            $("#cookie-name").text(cookie);
+            $("#cookie-vendor").text(d.vendor);
+            $("#cookie-description").text(d.description);
           });
         }
       });
